--- a/gulp-automation-main/package.json
+++ b/gulp-automation-main/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "guplfile.js",
   "scripts": {
-    "start":  "./node_modules/gulp-cli/bin/gulp.js",
-    "test":   "./node_modules/gulp-cli/bin/gulp.js --version",
-    "info":   "./node_modules/gulp-cli/bin/gulp.js --tasks",
-    "task":   "./node_modules/gulp-cli/bin/gulp.js $npm_config_name"
+    "start": "./node_modules/gulp-cli/bin/gulp.js",
+    "test": "./node_modules/gulp-cli/bin/gulp.js --version",
+    "info": "./node_modules/gulp-cli/bin/gulp.js --tasks",
+    "task": "./node_modules/gulp-cli/bin/gulp.js $npm_config_name"
   },
   "author": "Pep Jiménez <jjimen2@xtec.cat>",
   "license": "GNU GPL",
@@ -16,6 +16,7 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
+    "gulp-minify": "^3.1.0",
     "gulp-uglify": "^3.0.2"
   }
 }
